<resources>
    <string name="app_name">Github Trending Repo</string>


    <string name="empty_text">No repositories found</string>
    <string name="text_watchers">Watchers</string>
    <string name="text_stars">stars</string>
    <string name="text_forks">forks</string>
    <string name="share">Share</string>
    <string name="visit">Visit</string>
    <string name="item_date" formatted="false">%s at %s</string>

</resources>